003. Search Results servlet / processor
setSearchProperties and some constants.